--- a/Mon CV/index.html
+++ b/Mon CV/index.html
@@ -10,13 +10,15 @@
 			<h1 style="font-size:30px;text-align:center">Technicien informatique</h1>
 				<hr />
 				<h2 style="text-align:center"><u>Compétences</u></h2>
+				<center>
+
 					<table>
 						<tr>
 							<td>
 								<h3>Informatique</h3>
 							</td>
 							<td>
-								<h3><FONT color="white">celule vide tableau</FONT>
+								<h3><FONT color="white">celule vide du tableau pour faire une celule vide</FONT>
 </h3>
 							</td>
 							<td>
@@ -84,6 +86,7 @@
 							</td>
 						</tr>
 					</table>
+				</center>
 				<center>
 					<table>
 						<tr>
@@ -171,7 +174,7 @@
 					</li>
 				</ul>
 		</main>
-		
+
 	<body>
 
 
