--- a/Mon CV/index.html
+++ b/Mon CV/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
 
@@ -7,6 +7,30 @@
 	</head>
 	<body>
 		<main style="font-family:Times New Roman">
+			<center>
+				<table>
+					<tr>
+						<td>
+							Stéphane DECRUYENAERE
+						</td>
+						<td>
+							<FONT color="white">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</FONT>
+						</td>
+						<td>
+							Né le 9 Décembre 1972
+						</td>
+					</tr>
+					<tr>
+						<td>
+							Tel : 06.71.89.99.82
+						</td>
+						<td></td>
+						<td>
+							Permis B
+						</td>
+					</tr>
+				</table>
+			</center>
 			<h1 style="font-size:30px;text-align:center">Technicien informatique</h1>
 				<hr />
 				<h2 style="text-align:center"><u>Compétences</u></h2>
@@ -176,6 +200,11 @@
 		</main>
 
 	<body>
+		<footer>
+			<p>
+				Contact <a href="mailto:computer.wizard36@gmail.com"> computer.wizard36@gmail.com</a>
+			</p>
+		</footer>
 
 
 </html>
