--- a/Mon CV/index.html
+++ b/Mon CV/index.html
@@ -6,7 +6,7 @@
 		<title>Decruyenaere Stéphane Développeur</title>
 	</head>
 	<body>
-		<main style="font-family:Times New Roman">
+		<header>
 			<center>
 				<table>
 					<tr>
@@ -35,6 +35,9 @@
 				<hr />
 				<h2 style="text-align:center"><u>Compétences</u></h2>
 				<center>
+
+		</header>
+		<main style="font-family:Times New Roman">
 
 					<table>
 						<tr>
@@ -198,13 +201,13 @@
 					</li>
 				</ul>
 		</main>
-
-	<body>
 		<footer>
 			<p>
-				Contact <a href="mailto:computer.wizard36@gmail.com"> computer.wizard36@gmail.com</a>
+				Contact <a>computer.wizard36@gmail.com</a>
 			</p>
 		</footer>
+
+	</body>
 
 
 </html>
